# zero

./: .gitignore  CMakeLists.txt
zero/: __init__.py  core.py  event.py  redis_backend.py  wamp.py  zerorpc_backend.py
zero/test/: test_pubsub.py
zerocpp/: CMakeLists.txt  lib.cpp  lib_test.cpp
